# docs/swagger.json
@@ -25,9 +25,9 @@
                 "operationId": "get_adverts",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Get adverts",
-                        "name": "pageStr",
+                        "type": "string",
+                        "description": "page info",
+                        "name": "page",
                         "in": "query"
                     }
                 ],
@@ -62,9 +62,14 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Add Advert to DB",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -77,12 +82,37 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "password",
+                        "name": "category",
                         "in": "formData"
                     },
                     {
                         "type": "string",
-                        "name": "username",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "location",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "phone_number",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "price",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "name": "title",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "user_id",
                         "in": "formData"
                     }
                 ],
@@ -117,9 +147,6 @@
         "/api/advert/fav": {
             "get": {
                 "description": "Get User Favourite List",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -128,14 +155,6 @@
                 ],
                 "summary": "Get User Favourite List",
                 "operationId": "get_fav",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "user",
-                        "name": "default",
-                        "in": "query"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "status",
@@ -264,6 +283,60 @@
                 }
             }
         },
+        "/api/advert/search": {
+            "get": {
+                "description": "Search Adverts by Title",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "advert"
+                ],
+                "summary": "Search",
+                "operationId": "search_adv",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "title",
+                        "name": "title",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "status",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/AdvertAPI.AdvertInfo"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "error"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/advert/{id}": {
             "get": {
                 "description": "Get Advert by ID",
@@ -291,10 +364,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/AdvertAPI.AdvertInfo"
-                            }
+                            "$ref": "#/definitions/AdvertAPI.AdvertInfo"
                         }
                     },
                     "400": {
@@ -377,7 +447,12 @@
                         "in": "formData"
                     },
                     {
-                        "type": "string",
+                        "type": "integer",
+                        "name": "user_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
                         "name": "views",
                         "in": "formData"
                     }
@@ -461,7 +536,7 @@
         },
         "/auth/sign-in": {
             "post": {
-                "description": "Login",
+                "description": "Sign in app",
                 "consumes": [
                     "application/json"
                 ],
@@ -471,6 +546,7 @@
                 "tags": [
                     "auth"
                 ],
+                "summary": "Login",
                 "operationId": "login",
                 "parameters": [
                     {
@@ -513,7 +589,7 @@
         },
         "/auth/sign-up": {
             "post": {
-                "description": "Create account",
+                "description": "Create account in app",
                 "consumes": [
                     "application/json"
                 ],
@@ -523,7 +599,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "SignUp",
+                "summary": "Register",
                 "operationId": "create-account",
                 "parameters": [
                     {
@@ -566,6 +642,29 @@
         }
     },
     "definitions": {
+        "AdvertAPI.AdvertImage": {
+            "type": "object",
+            "properties": {
+                "advertId": {
+                    "type": "integer"
+                },
+                "fname": {
+                    "type": "string"
+                },
+                "fsize": {
+                    "type": "integer"
+                },
+                "ftype": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "path": {
+                    "type": "string"
+                }
+            }
+        },
         "AdvertAPI.AdvertInfo": {
             "type": "object",
             "properties": {
@@ -602,8 +701,11 @@
                 "title": {
                     "type": "string"
                 },
+                "user_id": {
+                    "type": "integer"
+                },
                 "views": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
